--- a/package.json
+++ b/package.json
@@ -23,28 +23,27 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "peerDependencies": {
-        "prop-types": "^15.6.0",
-        "react": "^16.11.0",
-        "react-dom": "^16.11.0"
+        "prop-types": ">=15.8.1",
+        "react": ">=16.14.0",
+        "react-dom": ">=16.14.0"
     },
     "devDependencies": {
         "babel-cli": "^7.0.0-beta.3",
         "babel-core": "^6.26.3",
-        "babel-eslint": "^10.0.3",
+        "babel-eslint": "^10.1.0",
         "babel-loader": "^7.1.5",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-plugin-transform-react-jsx": "^6.24.1",
         "babel-preset-env": "^1.7.0",
-        "babel-preset-react": "^6.16.0",
+        "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
-        "eslint": "^6.6.0",
+        "eslint": "^6.8.0",
         "path": "^0.12.7",
-        "prop-types": "^15.6.0",
-        "react": "^16.11.0",
-        "react-dom": "^16.11.0",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.9.0"
-    },
-    "dependencies": {}
+        "prop-types": "^15.8.1",
+        "react": "^16.14.0",
+        "react-dom": "^16.14.0",
+        "webpack": "^4.46.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.3"
+    }
 }
